# qiskit-addon-mpf

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml
.github/workflows/: citation.yml  coverage.yml  docs.yml  release.yml  test_development_versions.yml  test_latest_versions.yml  test_minimum_versions.yml
docs/: conf.py  index.rst  install.rst
docs/_templates/autosummary/: class_without_inherited_members.rst
docs/apidocs/: index.rst  qiskit_addon_mpf.backends.quimb_circuit.rst  qiskit_addon_mpf.backends.quimb_layers.rst  qiskit_addon_mpf.backends.quimb_tebd.rst  qiskit_addon_mpf.backends.rst  qiskit_addon_mpf.backends.tenpy_layers.rst  qiskit_addon_mpf.backends.tenpy_tebd.rst  qiskit_addon_mpf.costs.rst  qiskit_addon_mpf.dynamic.rst  qiskit_addon_mpf.rst  qiskit_addon_mpf.static.rst
docs/explanations/: index.rst  mpf_stability.ipynb
docs/how_tos/: choose_trotter_steps.ipynb  using_approximate_model.ipynb
docs/tutorials/: 01_getting_started.ipynb
qiskit_addon_mpf/: __init__.py  dynamic.py  static.py
qiskit_addon_mpf/backends/: __init__.py  interface.py
qiskit_addon_mpf/backends/quimb_circuit/: __init__.py  evolver.py  state.py
qiskit_addon_mpf/backends/quimb_layers/: __init__.py  evolver.py  model.py
qiskit_addon_mpf/backends/quimb_tebd/: __init__.py  evolver.py  state.py
qiskit_addon_mpf/backends/tenpy_layers/: __init__.py  evolver.py  model.py
qiskit_addon_mpf/backends/tenpy_tebd/: __init__.py  evolver.py  state.py
qiskit_addon_mpf/costs/: __init__.py  exact.py  frobenius.py  lse.py  sum_of_squares.py
qiskit_addon_mpf/static/: __init__.py  approximate.py  exact.py  lse.py
releasenotes/notes/: drop-python-3.9-5c4e28254f54bfe8.yaml  dynamic-mpf-cf18e0b4d2bdeaff.yaml  expose-assume-psd-ea3d4f453b02850c.yaml  quimb-layers-keep-only-odd-bd6c831bb50c18b7.yaml  reverse-layers-on-mpo-6a6651864b6b3f7a.yaml
releasenotes/notes/0.3/: fix-numerical-time-checks-4b0d9f65f704caaa.yaml  remove-scaling-factor-064e157afdfeadc9.yaml  tenpy-conserve-none-f34f73b38b89111c.yaml  tenpy-layers-N-steps-guard-96e57723af75c8a0.yaml
test/: test_dynamic.py  test_static.py
test/backends/quimb_circuit/: test_e2e.py  test_state.py
test/backends/quimb_layers/: test_e2e.py  test_evolver.py  test_model.py
test/backends/quimb_tebd/: test_e2e.py  test_state.py
test/backends/tenpy_layers/: test_e2e.py  test_evolver.py  test_model.py
test/backends/tenpy_tebd/: test_e2e.py  test_state.py
test/costs/: test_exact.py  test_lse.py  test_sum_of_squares.py
test/static/: test_approximate.py  test_exact.py  test_lse.py
tools/: verify_images.py
